--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-My final code with blue theme
-
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,16 +13,8 @@ My final code with blue theme
       body {
         font-family: 'Poppins', sans-serif;
         transition: background-color 0.3s, color 0.3s;
-      }
-
-      body.dark {
-        background-color: #111827; /* Proper dark background */
-        color: #e5e5e5;             /* Light text for dark mode */
-      }
-
-      body.light {
-        background-color: #ffffff; /* Light background */
-        color: #111827;             /* Dark text for light mode */
+        background-color: #ffffff; /* White background */
+        color: #111827; /* Dark text for light mode */
       }
 
       nav.sticky-nav a {
@@ -36,8 +25,9 @@ My final code with blue theme
         color: #ffffff;
       }
 
+      /* Updated header with blue background */
       header {
-        background-color: #1f2937;
+        background-color: #007bff; /* Blue background */
       }
 
       #hamburger {
@@ -57,9 +47,34 @@ My final code with blue theme
         justify-content: center;
         align-items: center;
       }
+
+      /* Project card hover effect */
+      .project-box {
+        background-color: #f8fafc;
+        padding: 2rem;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s, box-shadow 0.3s;
+      }
+
+      .project-box:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+      }
+
+      .project-box h3 {
+        font-size: 1.25rem;
+        font-weight: 600;
+      }
+
+      /* Footer */
+      footer {
+        background-color: #1f2937; /* Navy blue footer */
+        color: white;
+      }
     </style>
   </head>
-  <body class="dark font-sans">
+  <body>
     <!-- HEADER -->
     <header class="hero py-6 px-8 shadow-md">
       <div class="max-w-7xl mx-auto flex justify-between items-center">
@@ -86,10 +101,6 @@ My final code with blue theme
           <a href="#contact">Contact</a>
           <a href="#resume">Resume</a>
         </div>
-        <button id="theme-toggle" class="bg-gray-800 text-white px-4 py-2 rounded-full hover:bg-gray-700 transition flex items-center">
-          <span id="theme-icon" class="material-icons">dark_mode</span>
-          <span class="ml-2">Toggle Theme</span>
-        </button>
       </div>
     </nav>
 
@@ -166,31 +177,5 @@ My final code with blue theme
     <footer class="bg-black text-white py-6 text-center">
       &copy; 2025 Sachin Gupta. All rights reserved.
     </footer>
-
-    <!-- JS for Theme & Menu -->
-    <script>
-      AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
-
-      const themeToggleButton = document.getElementById("theme-toggle");
-      const currentTheme = localStorage.getItem("theme") || "dark";
-      document.body.classList.add(currentTheme);
-
-      themeToggleButton.addEventListener("click", () => {
-        if (document.body.classList.contains("dark")) {
-          document.body.classList.replace("dark", "light");
-          localStorage.setItem("theme", "light");
-        } else {
-          document.body.classList.replace("light", "dark");
-          localStorage.setItem("theme", "dark");
-        }
-      });
-
-      const hamburgerButton = document.getElementById("hamburger");
-      const mobileMenu = document.getElementById("mobile-menu");
-
-      hamburgerButton.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-      });
-    </script>
   </body>
 </html>
